# NeuralDBG

./: .augment_pytest_report_layers.xml  .coverage  .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AGENTS.md  AI_GUIDELINES.md  AQUARIUM_IDE_REMOVAL_IMPLEMENTATION.md  ARCHITECTURE.md  AUTOMATION_GUIDE.md  BENCHMARKING_IMPLEMENTATION_SUMMARY.md  BUG_FIXES.md  BUG_FIXES_SUMMARY.md  BUG_REPORT.md  BUG_TRACKING.csv  CHANGELOG.md  CHECKLIST.md  CLEANUP_COMMIT_MESSAGE.md  CLEANUP_EXECUTION.md  CLEANUP_FILE_LIST.md  CLEANUP_INDEX.md  CLEANUP_NOTES.md  CLEANUP_PLAN.md  CLEANUP_README.md  CLEANUP_REFOCUS.md  CLEANUP_SCRIPTS_INDEX.md  CLI_REFOCUS.md  CLOUD_IMPROVEMENTS_SUMMARY.md  COLAB_IMPLEMENTATION_SUMMARY.md  COMMUNITY_BUILDING_COMPLETE.md  COMMUNITY_FEATURES.md  COMPLETE_SESSION_REPORT.md  CONFIGURATION_SYSTEM_COMPLETE.md  CONFIG_VALIDATION_IMPLEMENTATION.md  CONFIG_VALIDATION_QUICK_REF.md  CONSOLIDATION_CHECKLIST.md  (+159 more)
.antigravity/: RULES.md
.github/: MARKETING_AUTOMATION_CHECKLIST.md  MARKETING_AUTOMATION_SUMMARY.md  copilot-instructions.md  dependabot.yml
.venv312/: pyvenv.cfg
Aquarium/: aquarium-development-plan.md  aquarium-summary.md
docs/: API_DOCUMENTATION.md  AQUARIUM_IDE_REMOVAL.md  ARCHITECTURE.md  AUTOMATION_REFERENCE.md  BUILD_DOCS.md  CONFIGURATION_VALIDATION.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_QUICK_START.md  DEPRECATIONS.md  DOCSTRING_GUIDE.md  DOCUMENTATION_INDEX.md  ERROR_SUGGESTIONS_REFERENCE.md  INTEGRATIONS.md  LOGGING_GUIDE.md  MARKETING_AUTOMATION_DIAGRAM.md  MARKETING_AUTOMATION_GUIDE.md  MARKETING_AUTOMATION_QUICK_REF.md  MARKETING_AUTOMATION_SETUP.md  MARKET_POSITIONING.md  MIGRATION_GUIDE.md  PERFORMANCE.md  README.md  RELEASE_QUICK_START.md  ai_integration_guide.md  benchmarks.md  cloud.md  community_building.md  conf.py  dsl.md  educators_guide.md  index.html  index.rst  installation.md  migration.md  parameter_tracking.md  quick_reference.md  quickstart.md  transformer_reference.md  troubleshooting.md
examples/: EXAMPLES_QUICK_REF.md  advanced_hpo_v0.2.7.neural  ai_examples.py  automl_example.py  benchmarking_demo.py  community_example.py  example_tensorflow.py  hpo_advanced_example.py  mnist_2_optimized_pytorch.py  shape_propagation_demo.py  showcase_submission.md  transformer.neural  transformer_tutorial.py
ia_rules/: AI_GUIDELINES.md
infrastructure_planning/: CODEBASE_GUIDE.md  _add_rule33.py  _update_authority_naming.py  milestone_0_tasks.md  milestone_0_tasks_fr.md  milestone_25_tasks.md  milestone_25_tasks_fr.md  milestone_50_tasks.md  milestone_50_tasks_fr.md
kubernetes/: README.md  neural-api-deployment.yaml  neural-aquarium-deployment.yaml  neural-dashboard-deployment.yaml  neural-marketplace-deployment.yaml  neural-redis-deployment.yaml  neural-secrets.yaml
neural/: __init__.py  __main__.py  test.py  (+4 more)
(+1494 files in other folders)
