[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Note: We keep setup.py as the source of truth for metadata (including version 0.3.0.dev0).
# Moving to PEP 621 ([project]) can be done later; for now, this provides modern build isolation.


[tool.ruff]
line-length = 100
src = ["neural", "tests"]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "neural/src",
]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["neural", "pretrained_models"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
force-single-line = false
force-sort-within-sections = true
order-by-type = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.venv312
  | build
  | dist
  | neural/src
)/
'''

[tool.bandit]
exclude_dirs = [".venv", ".venv312", "venv", "tests", "docs"]
skips = ["B101", "B601"]  # B101: assert_used (common in tests), B601: paramiko_calls

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["tests/aquarium_e2e", "tests/aquarium_ide", "tests/tmp_path"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gpu: marks tests that require GPU",
    "requires_torch: marks tests that require PyTorch",
    "requires_tensorflow: marks tests that require TensorFlow",
    "requires_onnx: marks tests that require ONNX",
]

[tool.coverage.run]
source = ["neural"]
branch = true
parallel = false
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    ".venv312/*",
    "neural/src/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

